--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Manager</title>
-    <link rel="stylesheet" href="../styles.css">
+     <link rel="stylesheet" href="/styles.css">
+
 </head>
 
 <body>
@@ -41,7 +42,7 @@
                 <h2>IMAGE</h2>
                 <div>
                     <h1>Username</h1>
-                    <p>example@example.com</p>
+                    <p>example@example.comss</p>
                 </div>
             </div>
         </div>
