Fix: Renamed Header to contain correct Routes; Implemented Category View

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
           <li><a href="/" class="hover:text-indigo-600">Home</a></li>
           <li><a href="/employees" class="hover:text-indigo-600">Employees</a></li>
           <li><a href="/transactions" class="hover:text-indigo-600">Transactions</a></li>
-          <li><a href="/category" class="hover:text-indigo-600">Category</a></li>
+          <li><a href="/categorys" class="hover:text-indigo-600">Category</a></li>
         </ul>
       </nav>
     </div>
