--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
           <li><a href="/" class="hover:text-indigo-600">Home</a></li>
           <li><a href="/employees" class="hover:text-indigo-600">Employees</a></li>
           <li><a href="/transactions" class="hover:text-indigo-600">Transactions</a></li>
-          <li><a href="/categorys" class="hover:text-indigo-600">Category</a></li>
+          <li><a href="/categorys" class="hover:text-indigo-600">Categorys</a></li>
         </ul>
       </nav>
     </div>
