Fix: 1. Fix UI/Routes Feat: 1. Implement Qureys for DB

--- a/views/categorys.ejs
+++ b/views/categorys.ejs
@@ -13,11 +13,11 @@
 
         <div class="max-w-6xl mx-auto">
             <!-- Header -->
-            <div class="flex justify-between items-center mb-6">
+            <div class="flex justify-between items-center mb-6 mt-6">
                 <h1 class="text-2xl font-bold">Transaction Categories</h1>
                 <div>
-                    <button class="bg-indigo-600 text-white px-4 py-2 rounded text-sm hover:bg-indigo-700">Add
-                        Category</button>
+                    <button class="bg-indigo-600 text-white px-4 py-2 rounded text-sm hover:bg-indigo-700"><a href="/categorys/new">Add Category</a></button>
+                        <button class="border px-4 py-2 rounded text-sm">Download</button>
                 </div>
             </div>
 
@@ -30,7 +30,7 @@
                             <th class="px-6 py-4">Name</th>
                             <th class="px-6 py-4">Description</th>
                             <th class="px-6 py-4">Type</th>
-                            <th class="px-6 py-4">Modify</th>
+                            <th class="px-6 py-4">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
