Fix: Employee Summary Dynamically Display Data from DB

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -98,7 +98,9 @@
                                         <%= emp.status %>
                                     </td>
                                     <td class="px-6 py-4">
-                                        <%= new Date(emp.hire_date) %>
+                                        <%= new Date(emp.hire_date).toLocaleDateString(undefined, {year: "numeric",
+  month: "long",
+  day: "numeric"}) %>
                                     </td>
                                     <td>
                                         <form action="/employee/<%= emp.id %>/delete" method="POST">
