Feat: Emmployees can now be deleted from DB

--- a/views/employees.ejs
+++ b/views/employees.ejs
@@ -103,7 +103,7 @@
   day: "numeric"}) %>
                                     </td>
                                     <td>
-                                        <form action="/employee/<%= emp.id %>/delete" method="POST">
+                                        <form action="/employees/<%= emp.id %>/delete" method="POST">
                                             <button class="border px-4 py-2 rounded text-sm">Delete</button>
                                         </form>
                                     </td>
