Feat: Script to Delete DB for Reset/Scale

--- a/views/new-employee.ejs
+++ b/views/new-employee.ejs
@@ -31,8 +31,8 @@
       <label class="block mb-1 text-sm font-medium">Status</label>
       <select name="status" class="w-full border px-4 py-2 rounded">
         <option value="Active">Active</option>
-        <option value="Retiring">Retiring</option>
-        <option value="Junior">Junior</option>
+        <option value="Retiring">Retired</option>
+        <option value="Junior">Terminated</option>
       </select>
     </div>
 
