Feat: Add client side validation for employee entry

--- a/views/new-employee.ejs
+++ b/views/new-employee.ejs
@@ -14,17 +14,17 @@
 
     <div>
       <label class="block mb-1 text-sm font-medium">First Name</label>
-      <input type="text" name="first_name" class="w-full border px-4 py-2 rounded" required>
+      <input type="text" name="first_name" class="w-full border px-4 py-2 rounded" maxlength="150" required>
     </div>
 
     <div>
       <label class="block mb-1 text-sm font-medium">Last Name</label>
-      <input type="text" name="last_name" class="w-full border px-4 py-2 rounded" required>
+      <input type="text" name="last_name" class="w-full border px-4 py-2 rounded"  maxlength="150" required>
     </div>
 
     <div>
       <label class="block mb-1 text-sm font-medium">Age</label>
-      <input type="number" name="age" class="w-full border px-4 py-2 rounded" required>
+      <input type="number" name="age" class="w-full border px-4 py-2 rounded" min="17" required>
     </div>
 
     <div>
